[package]
name = "zuffer"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/al8n/zuffer"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT/Apache-2.0"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = []

[dependencies]
fmmap = "0.3"
thiserror = "1"
rand = "0.8"
indexsort = "*"

[dev-dependencies]
criterion = "0.4"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
